# astdiff

./: pyproject.toml  stddiff.py  stddiff_gui.py
cli/: main.py
core/: __init__.py  analyzer.py  api.py  ast_diff.py  engine.py  models.py  parser.py  standardization.py  xml_analyzer.py
gui/: app.py  backend.py  workers.py
gui/qml/: App.qml
gui/qml/pages/: ComparePage.qml  DetailPage.qml  DiffViewPage.qml  ReportPage.qml
test_cases/: sample_v1.cpp  sample_v2.cpp
test_cases/v1/: ast_comprehensive.cpp  ast_sample.cpp  gbk_sample.cpp  helper.cpp  line_count_test.cpp  sample.xml
test_cases/v2/: ast_comprehensive.cpp  ast_sample.cpp  gbk_sample.cpp  helper.cpp  line_count_test.cpp  new_module.cpp  sample.xml
tests/: test_ast_comprehensive.py  test_ast_diff.py  test_excludes.py  test_line_count.py  test_xml_diff.py
